[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/bottomDoor.png" type="Texture" id=1]
[ext_resource path="res://DynamicDoor.gd" type="Script" id=2]
[ext_resource path="res://Assets/plateInactive.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.8577, 73.806 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.9559, 65.4744 )

[node name="DynamicDoor" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PressurePlate1" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="PressurePlate1"]
position = Vector2( 153.604, -150.24 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressurePlate1"]
position = Vector2( 153.604, -150.24 )
shape = SubResource( 2 )

[node name="PressurePlate2" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="PressurePlate2"]
position = Vector2( -151.922, -149.68 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressurePlate2"]
position = Vector2( -151.922, -149.68 )
shape = SubResource( 2 )
[connection signal="body_entered" from="PressurePlate1" to="." method="_on_PressurePlate1_body_entered"]
[connection signal="body_exited" from="PressurePlate1" to="." method="_on_PressurePlate1_body_exited"]
[connection signal="body_entered" from="PressurePlate2" to="." method="_on_PressurePlate2_body_entered"]
[connection signal="body_exited" from="PressurePlate2" to="." method="_on_PressurePlate2_body_exited"]
